<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <TextView
            android:id="@+id/welcome_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_admin" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Spinner
            android:id="@+id/user_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <TextView
            android:id="@+id/disable_account_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable_account_textView" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Spinner
            android:id="@+id/user_spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/disable_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable_account_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="162dp" />

        <Button
            android:id="@+id/manage_categories_button"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:text="@string/manage_categories_button"
            android:translationX="35dp"
            android:visibility="visible"
            tools:visibility="visible" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
