<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="286dp" />

        <TextView
            android:id="@+id/user_role_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_role"
            android:textColor="#673AB7" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <TextView
            android:id="@+id/welcome_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/account_type"
            android:textColor="#673AB7" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="117dp" />

        <Button
            android:id="@+id/LessorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lessor_button" />

        <Button
            android:id="@+id/manageRequestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Manage Requests" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="46dp" />

        <Button
            android:id="@+id/rentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rent_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
