<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="77dp" />

        <TextView
            android:id="@+id/apptitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_title"
            android:textColor="#673AB7"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="99dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#673AB7"
            android:hint="@string/username_input"
            android:textColor="#673AB7"
            android:textColorHint="#9E373535"
            android:textColorLink="#673AB7" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#673AB7"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="#673AB7"
            android:textColorHint="#9E2C2C2C"
            android:textColorLink="#673AB7" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create_account_button"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="createAccount"
                android:text="@string/create_account_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#673AB7"
                android:textColorLink="#673AB7"
                app:strokeColor="#673AB7" />

            <Space
                android:layout_width="11dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


            <Button
                android:id="@+id/login_button"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="login"
                android:text="@string/log_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#673AB7"
                android:textColorLink="#673AB7"
                app:strokeColor="#673AB7"
                tools:text="@string/log_in" />

        </LinearLayout>

        <TextView
            android:id="@+id/login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FF0000" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>